<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bevara</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="edit_message">Please edit the message</string>
    <string name="button_send">Informant Name</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="go_to_pics">Photographs</string>
    <string name="title_activity_interact_pics">Interact with Pictures</string>
    <string name="menu_pictures">Photographs</string>
    <string name="menu_videos">Videos</string>
    <string name="menu_send_data">Send Data</string>
    <string name="menu_voice_recordings">Voice Recordings</string>
    <string name="title_activity_take_picture">Take Picture</string>
    <string name="picture_cheese">Cheeeeese</string>
    <string name="take_pic">Take a picture!</string>
    <string name="title_activity_view_pics">View Pictures</string>
    <string name="pictures_taken">Pictures Taken</string>
    <string name="title_activity_interact_voice">Interact with all the voice aspects</string>
    <string name="voice_area">You are in the Voice Recordings Area</string>
    <string name="record_voice">Record a voice</string>
    <string name="title_activity_record_voice">Record Voice</string>
    <string name="title_activity_get_consent">Get Consent</string>
    <string name="get_consent">I, __________________________, hereby grant Carnegie Mellon University, a full non-exclusive right to distribute the recordings of my voice in the DATABASE NAME recorded in DATE at the LOCATION and any data and/or synthesis voices derived from it, under the following licence</string>
    <string name="menu_consent">Get Informant Consent</string>
    <string name="enter_name">Enter Name</string>
    <string name="check_consent">I consent</string>
    <string name="title_activity_insert_text">Insert Text</string>
    <string name="source_lang">Source Language</string>
    <string name="dest_lang">Destination Language</string>
    <string name="title_activity_display_source_lang">Display Source Language</string>
    <string name="edit_src">Describe</string>

</resources>