<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GetConsentActivity" >

    <EditText
        android:id="@+id/enter_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/get_consent" />

    <CheckBox
        android:id="@+id/check_consent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="52dp"
        android:layout_marginLeft="92dp"
        android:text="@string/check_consent" />

</RelativeLayout>